THRIFT-5144: Fix memory leak when generate deserialize list element Client: c_glib Patch: wangyunjian

Signed-off-by: wangyunjian <wangyunjian@huawei.com>